changes to first demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <link rel="preload" href="../src/xss/turn.css" as="style">
+    <link rel="preload" href="../dist/css/turn.min.css" as="style">
 </head>
 <body>
 
